<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mail Finder</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="EmailDomainHint">Enter your email or domain</string>
    <string name="SearchButton">Search</string>
    <string name="title_activity_results">Mail Server Settings</string>
    <string name="MailServerType">Mail Server Type:</string>
    <string name="dots">...</string>
    <string name="IncomingServerName">Incoming Server Name:</string>
    <string name="outgoingServerName">Outgoing Server Name:</string>
    <string name="TCPportNumber">TCP Port Number and encryption type:</string>
    <string name="Feedback">Feedback</string>
    <string name="Exit">Exit</string>
    <string name="action_about">About</string>
    <string name="action_back">Back</string>
    <string name="action_stop">action_stop</string>
    <string name="StopSearching">Stop Searching</string>
    <string name="SearchingSettings">"Searching settings for: "</string>
    <string name="Generic_Error">Error</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="POP3">POP3</string>
    <string name="ExchangeSettings">Exchange</string>
    <string name="IMAPSettings">IMAP</string>
    <string name="POPSettings">POP</string>
    <string name="SMTPSettings">SMTP</string>
    <string name="POP3ServerSettings">POP3 Server Settings</string>
    <string name="AvailableTCPports">Available TCP Ports</string>
    <string name="SMTPServerSettings">SMTPServerSettings</string>
    <string name="IMAPServerSettings">IMAPServerSettings</string>
    <string name="ExchangeServerSettings">ExchangeServerSettings</string>
    <string name="ExchangeServerName">ExchangeServerName</string>
    <string name="MailSettingsFinder">Mail Settings Finder</string>
    <string name="AboutAlertDialogTitle">About</string>
    <string name="MessageAbout">This App helps you find your email server settings for your email</string>

</resources>
