<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item android:id="@+id/action_stop"
          android:title="@string/StopSearching"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="200"
          app:showAsAction="never"/>
    <item android:id="@+id/action_feedback"
          android:title="@string/Feedback"
          android:orderInCategory="300"
          app:showAsAction="never"/>
    <item android:id="@+id/action_about"
          android:title="@string/action_about"
          android:orderInCategory="400"
          app:showAsAction="never"/>
    <item android:id="@+id/action_exit"
          android:title="@string/Exit"
          android:orderInCategory="500"
          app:showAsAction="never"/>

</menu>
